--- a/Episodios/episodio.html
+++ b/Episodios/episodio.html
@@ -18,9 +18,9 @@
         </div>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Episodios</a></li>
-                <li><a href="#">Extra</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/">Episodios</a></li>
+                <li><a href="/">Extra</a></li>
             </ul>
             <button class="btn" onclick="window.open('mailto:rph26031994@gmail.com', '_blank')">Registrarse</button>
         </nav>
@@ -52,5 +52,20 @@
     <script src="lista.js"></script>
     <script src="/script.js"></script>
 </body>
-
+<footer class="footer">
+    <div class="footer-content">
+      <p class="footer-text">Creado por <strong>RodriDev</strong> | Fionna y Cake &copy; 2025</p>
+      <div class="social-links">
+        <a href="https://github.com/rodridev-01" target="_blank" class="social-icon">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/rodridev26/" target="_blank" class="social-icon">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/rodrigou.py" target="_blank" class="social-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 </html>
