--- a/index.html
+++ b/index.html
@@ -63,5 +63,20 @@
     <script src="Episodios/lista.js"></script>
     <script src="script.js"></script>
 </body>
-
+<footer class="footer">
+    <div class="footer-content">
+      <p class="footer-text">Creado por <strong>RodriDev</strong> | Fionna y Cake &copy; 2025</p>
+      <div class="social-links">
+        <a href="https://github.com/rodridev-01" target="_blank" class="social-icon">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/rodridev26/" target="_blank" class="social-icon">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/rodrigou.py" target="_blank" class="social-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 </html>
